# Sisyphus-X-Pro

./: .env.example  .gitignore  BUG_FIX_PROGRESS_UPDATE.md  BUG_FIX_REPORT.md  BUG_FIX_WAVE2_COMPLETE.md  BUG_FIX_WAVE2_STATUS.md  BUG_FIX_WAVE2_TEAM_REPORT.md  CHANGELOG.md  CLAUDE.md  E2E_COMPLETION_REPORT.md  FINAL_100_PERCENT_COMPLETE_CONFIRMATION.md  FINAL_ACCEPTANCE_REPORT.md  FINAL_INTEGRATION_TEST_SUMMARY.md  FINAL_PROJECT_STATUS.md  FINAL_SESSION_SUMMARY.md  FINAL_TEAM_LEAD_REPORT.md  FINAL_WORK_SUMMARY.md  HARNESS_GUIDE.md  HEADER_MENU_TEST_REPORT.md  INTEGRATION_TEST_ROUND2_START.md  PROJECT_100_PERCENT_COMPLETE.md  PROJECT_COMPLETE_FINAL.md  PROJECT_COMPLETION.md  PROJECT_COMPLETION_CERTIFICATE.md  PROJECT_COMPLETION_CONFIRMATION.md  PROJECT_COMPLETION_REPORT.md  PROJECT_OFFICIAL_COMPLETION_ANNOUNCEMENT.md  PROJECT_STATUS_REPORT.md  PROJECT_VICTORY_REPORT.md  README.md  REPT_FRONTEND_PROGRESS.md  Sisyphus-X-Pro需求文档.backup.md  Sisyphus-X-Pro需求文档.md  WEB_UI_TESTING_SUMMARY.md  WORK_PROGRESS_SUMMARY.md  docker-compose.yml
backend/: .env.example  BACKEND_API_SUMMARY.md  README.md  SPRINT_COMPLETION_SUMMARY.md  UNIT_TEST_REPORT.md  coverage.json  pyproject.toml
backend/app/: __init__.py  builtin_keywords.py  config.py  database.py  init_builtin.py  main.py
backend/scripts/: dev.sh  init_seed_data.py  test.sh
backend/tests/: INTEGRATION_TEST_REPORT.md  conftest.py  test_api.py  test_auth_register.py  test_builtin_keywords.py  test_dashboard.py  test_docstring_parser.py  test_interface_service.py  test_keywords_toggle.py  test_main.py  test_scenarios.py  (+1 more)
(+249 files in other folders)
