[project]
name = "sisyphus-backend"
version = "0.1.0"
description = "Sisyphus-X-Pro Backend API"
readme = "README.md"
authors = [
    { name = "koco-co", email = "kopohub@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.35.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "minio>=7.2.8",
    "redis>=5.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.7.1",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.3.0",
    "apscheduler>=3.11.0",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.28.1",
    "ruff>=0.9.6",
    "pyright>=1.1.396",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() pattern is standard

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
